# ZowiDesktop

./: .gitignore  AGENTS.md  ANIMATIONS.md  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  LICENSE  MVVM.md  PLANNING.md  README.md  app.qrc  build.bat  build.sh  build_cli.sh  i18n.qrc  images.qrc  resources.qrc  test.bat  views.qrc
.github/: copilot-instructions.md
.github/workflows/: release.yml
.local/: CASUISTICS_REVIEW.md  PADSCREEN_IMPLEMENTING.md  TODO.md  listbox_lang_fonts.md  transport_thoughts.md
cmake/: toolchain-mingw.cmake
debian/: .gitignore  changelog  control  copyright  postinst  rules
docs/: index.html  keyring.gpg
docs/bg/: index.html
docs/ca/: index.html
docs/dists/jammy/: InRelease  Release  Release.gpg
docs/dists/jammy/main/binary-amd64/: Packages  Packages.bz2
docs/dists/noble/: InRelease  Release  Release.gpg
docs/dists/noble/main/binary-amd64/: Packages  Packages.bz2
docs/en/: index.html
docs/es/: index.html
docs/firmware/: PROTOCOL.md
docs/fr/: index.html
docs/project/: ARCHITECTURE.md  BUILD.md  DOWNGRADING_TO_QT5.md  MIGRATION.md  MIGRATION_TO_QT6.md  PLANNING.md  PROG_BOARD_HOWTO.md  UPGRADING_TO_QT6.md  ZOWILIBS.md  ZOWI_CLI_HOWTO.md
docs/project/win/: WIN_HOWTO.md
docs/tests/: TEST_ZOWI_CLI_HOWTO.md  ZOWI_CLI_HOWTO.md
i18n/: zowi_bg_BG.json  zowi_ca_ES.json  zowi_ca_ES.ts  zowi_en_US.json  zowi_en_US.ts  zowi_es_ES.json  zowi_es_ES.ts  zowi_fr_FR.json
packaging/: create-gh-release.sh
packaging/linux/: com.zowi.desktop.appdata.xml  create-appimage.sh  create-deb.sh  zowi-desktop.appdata.xml  zowi-desktop.desktop
packaging/windows/: build-portable.bat  create-portable-zip.sh  mingw-toolchain.cmake  qt.conf
packaging/windows/bt_native/: CMakeLists.txt  README.md  bt_native.cpp  bt_native.def  bt_native.h
packaging/windows/installer/: build-installer.bat  zowi-desktop.iss
qml/: ScanScreen.qml  SplashScreen.qml  WelcomeScreen.qml  main.qml
scripts/: grant_bluetooth_cap.sh  sync_firmware_from_zowiLibs.sh
src/: BtTest.cpp  bt_test.cpp  config.json  main.cpp  main_test.cpp  sessioncontroller.cpp  sessioncontroller.h  translator.cpp  translator.h  zowibluetoothcontroller.cpp  zowibluetoothcontroller.h
src/backends/bt_native/: CMakeLists.txt  native_bluetooth_backend.cpp  native_bluetooth_backend.h
src/backends/bt_qt/: CMakeLists.txt  qt_bluetooth_backend.cpp  qt_bluetooth_backend.h
src/backends/bt_serial/: CMakeLists.txt  serial_bluetooth_backend.cpp  serial_bluetooth_backend.h
src/backends/bt_serial_win/: CMakeLists.txt  win_serial_backend.cpp  win_serial_backend.h
src/cli/: CMakeLists.txt  cli_commands.cpp  cli_commands.h  cli_state.cpp  cli_state.h  cli_util.cpp  cli_util.h  main.cpp
src/cli/tests/: test_connect_rename.sh  test_disconnect.sh  test_install_alarm.sh
src/cli/tests/bt/: run_all.sh  test_control.sh  test_install_adivinawi.sh  test_restore_factory_firmware.sh
src/cli/tests/usb/: run_all.sh  test_connect_rename.sh  test_control.sh  test_disconnect.sh  test_install_adivinawi.sh  test_install_alarm.sh  test_ports.sh  test_restore_factory_firmware.sh  test_usb_options.sh
src/controllers/: BluetoothController.cpp  BluetoothController.h  ConfigController.cpp  ConfigController.h  SessionController.cpp  SessionController.h  TranslatorController.cpp  TranslatorController.h
src/core/: CMakeLists.txt  DeviceInfo.h
src/core/include/zowi/: bluetooth_api.h  config_store.h  device_info.h  protocol.h  robot_commands.h  session_store.h  translation_engine.h  transport_constants.h
src/core/src/: config_store.cpp  robot_commands.cpp  session_store.cpp  translation_engine.cpp
src/core/tests/: CMakeLists.txt  test_config_store.cpp  test_robot_commands.cpp  test_session_store.cpp  test_translation_engine.cpp
src/firmware/: CMakeLists.txt  ZOWI_Alarm_v2.hex  ZOWI_BASE_v2.hex
src/firmware/include/zowi/: stk500v1.h
src/firmware/src/: stk500v1.cpp
src/gui/: CMakeLists.txt  ZowiDesktop.exe.manifest  main.cpp  preview_main.cpp
src/gui/controllers/: BluetoothController.cpp  BluetoothController.h  ConfigController.cpp  ConfigController.h  RobotController.cpp  RobotController.h  SessionController.cpp  SessionController.h  TranslatorController.cpp  TranslatorController.h
src/services/: BluetoothNativeLoader.cpp  BluetoothNativeLoader.h  BluetoothService.cpp  BluetoothService.h  SessionService.cpp  SessionService.h  TranslationEngine.cpp  TranslationEngine.h
src/tests/: CMakeLists.txt  tst_SessionService.cpp  tst_TranslationEngine.cpp
src/views/: main.qml
src/views/components/: AnimatedZowi.qml  DevOverlay.qml  ForgetController.qml  MessageBar.qml  StatusBar.qml
src/views/screens/: HomeScreen.qml  PadScreen.qml  ScanScreen.qml  ScreenTemplate.qml  SettingsScreen.qml  SplashScreen.qml  StartScreen.qml  WelcomeScreen.qml  WizardFoundScreen.qml  WizardRenameScreen.qml  WizardScreen.qml
src/views/tests/: README.md  preview-home.sh  preview-pad.sh  preview-scan.sh  preview-screen.sh  preview-splash.sh  preview-welcome.sh  preview-wizard.sh  preview-wizardfound.sh  preview-wizardrename.sh
